# ppgi_elem

./: .gitignore  README.md  garlekin.py
cpp/: CMakeLists.txt  definitions.h  main.cpp
cpp/Fem1d/: CMakeLists.txt  Fem1d.cpp  Fem1d.h  PlotFem1d.py
cpp/Fem1d/tests/: CMakeLists.txt  Fem1dTest.cpp
cpp/LinearAlgebra/: CMakeLists.txt  Jacobi.cpp  Jacobi.h  Operations.cpp  Operations.h
cpp/LinearAlgebra/tests/: CMakeLists.txt  LinearAlgebraTest.cpp  ViennaClTest.cpp  sparse.cpp  vector-io.hpp
cpp/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
openacc/: saxpy.cpp
python/: garlekin.py  heat.py
python/Dados/: GridGrosso.txt  PegarDadosGrid.py  plot_elementos.py  primeiroselementos.txt
python/Elasticity/: Elasticity.py  Elasticity_test.py  Element.py  ElementoPlano.ipynb  FemCase.py  FiniteElement.py  PlotMap.py  Strain.py  Strain_test.py  elasticity.sublime-project
python/Heat2D/: Element.py  ElementoPlano.ipynb  FiniteElement.py  Makefile  PlotMap.py  Strain.py  Strain_test.py  heat.py  heat_test.py  heat_transient.py
